2013-09-13  Dmitry Antipov  <dmantipov@yandex.ru>

	* frame.el (x-focus-frame): Mark as declared in frame.c.

2013-09-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ls-lisp.el: Use advice-add.
	(original-insert-directory): Remove.
	(ls-lisp--insert-directory): Rename from insert-directory; add
	`orig-fun' argument.
	(insert-directory): Advise.

2013-09-13  Eli Zaretskii  <eliz@gnu.org>

	* term.el (term-emulate-terminal): Decode the command string
	before passing it to term-command-hook.  (Bug#15337)

2013-09-13  Glenn Morris  <rgm@gnu.org>

	* eshell/esh-util.el (ange-cache): Move declaration earlier.

	* eshell/esh-ext.el (eshell-search-path): Declare.

	* eshell/em-prompt.el (eshell/pwd): Autoload it.
	Otherwise an error occurs if eshell-dirs module not loaded.

	* progmodes/gdb-mi.el (gud-cont, gud-step): Declare.

2013-09-13  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-check-proper-method-and-host): Rename it from
	`tramp-check-proper-host'.  Check for a valid method name.

	* net/tramp-adb.el (tramp-adb-maybe-open-connection):
	* net/tramp-gvfs.el (tramp-gvfs-maybe-open-connection):
	* net/tramp-sh.el (tramp-maybe-open-connection):
	* net/tramp-smb.el (tramp-smb-maybe-open-connection): Call it.

	* net/tramp-cache.el (tramp-cache-print): Don't print text properties
	also for hash values.

2013-09-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* term/ns-win.el (parameters): Don't declare as dynamic.
	(before-make-frame-hook): Don't add ineffective function.

	* eshell/*.el: Use lexical-binding (bug#15231).

2013-09-12  Kenichi Handa  <handa@gnu.org>

	* composite.el (compose-gstring-for-graphic): Handle enclosing mark.

2013-09-12  Glenn Morris  <rgm@gnu.org>

	* vc/vc-svn.el (vc-svn-dir-status-files, vc-svn-dir-extra-headers)
	(vc-svn-ignore, vc-svn-retrieve-tag): Mark unused arguments.

	* subr.el (do-after-load-evaluation): Also give compiler warnings
	when obsolete files are used (except by obsolete files).
